--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,7 @@ cython_debug/
 
 # VScode
 *.code-workspace
+.vscode
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
