--- a/pixi.toml
+++ b/pixi.toml
@@ -36,3 +36,9 @@ sqlparse = { version = "==0.5.3", build = "pyhd8ed1ab_0" }
 tk = { version = "==8.6.13", build = "noxft_hd72426e_102" }
 typing_extensions = { version = "==4.15.0", build = "pyhcf101f3_0" }
 tzdata = { version = "==2025b", build = "h78e105d_0" }
+
+[environments]
+production = ["production-tools"]
+
+[feature.production-tools.dependencies]
+gunicorn = "*"
