--- a/pixi.toml
+++ b/pixi.toml
@@ -8,37 +8,37 @@ version = "0.1.0"
 [tasks]
 
 [dependencies]
-_libgcc_mutex = { version = "==0.1", build = "conda_forge" }
-_openmp_mutex = { version = "==4.5", build = "2_gnu" }
-asgiref = { version = "==3.9.2", build = "pyhd8ed1ab_0" }
-bzip2 = { version = "==1.0.8", build = "hda65f42_8" }
-ca-certificates = { version = "==2025.10.5", build = "hbd8a1cb_0" }
-django = { version = "==5.2.7", build = "pyhd8ed1ab_0" }
-django-bootstrap5 = { version = "==25.2", build = "pyhe01879c_1" }
-django-htmx = { version = "==1.26.0", build = "pyhcf101f3_0" }
-ld_impl_linux-64 = { version = "==2.44", build = "ha97dd6f_2" }
-libexpat = { version = "==2.7.1", build = "hecca717_0" }
-libffi = { version = "==3.4.6", build = "h2dba641_1" }
-libgcc = { version = "==15.1.0", build = "h767d61c_5" }
-libgomp = { version = "==15.1.0", build = "h767d61c_5" }
-liblzma = { version = "==5.8.1", build = "hb9d3cd8_2" }
-libmpdec = { version = "==4.0.0", build = "hb9d3cd8_0" }
-libsqlite = { version = "==3.50.4", build = "h0c1763c_0" }
-libuuid = { version = "==2.41.2", build = "he9a06e4_0" }
-libzlib = { version = "==1.3.1", build = "hb9d3cd8_2" }
-ncurses = { version = "==6.5", build = "h2d0b736_3" }
-openssl = { version = "==3.5.4", build = "h26f9b46_0" }
-pip = { version = "==25.2", build = "pyh145f28c_0" }
-python = { version = "==3.13.7", build = "h2b335a9_100_cp313" }
-python_abi = { version = "==3.13", build = "8_cp313" }
-readline = { version = "==8.2", build = "h8c095d6_2" }
-sqlparse = { version = "==0.5.3", build = "pyhd8ed1ab_0" }
-tk = { version = "==8.6.13", build = "noxft_hd72426e_102" }
-typing_extensions = { version = "==4.15.0", build = "pyhcf101f3_0" }
-tzdata = { version = "==2025b", build = "h78e105d_0" }
+_libgcc_mutex = { version = ">=0.1,<0.2", build = "conda_forge" }
+_openmp_mutex = { version = ">=4.5,<5", build = "2_gnu" }
+asgiref = { version = ">=3.11.0,<4", build = "pyhd8ed1ab_0" }
+bzip2 = { version = ">=1.0.8,<2", build = "hda65f42_8" }
+ca-certificates = { version = ">=2025.11.12,<2026", build = "hbd8a1cb_0" }
+django = { version = ">=6.0,<7", build = "pyhd8ed1ab_0" }
+django-bootstrap5 = { version = ">=25.2,<26", build = "pyhe01879c_1" }
+django-htmx = { version = ">=1.27.0,<2", build = "pyhcf101f3_0" }
+ld_impl_linux-64 = { version = ">=2.44,<3", build = "ha97dd6f_2" }
+libexpat = { version = ">=2.7.3,<3", build = "hecca717_0" }
+libffi = { version = ">=3.4.6,<4", build = "h2dba641_1" }
+libgcc = { version = ">=15.2.0,<16", build = "h767d61c_5" }
+libgomp = { version = ">=15.2.0,<16", build = "h767d61c_5" }
+liblzma = { version = ">=5.8.1,<6", build = "hb9d3cd8_2" }
+libmpdec = { version = ">=4.0.0,<5", build = "hb9d3cd8_0" }
+libsqlite = { version = ">=3.51.1,<4", build = "h0c1763c_0" }
+libuuid = { version = ">=2.41.2,<3", build = "he9a06e4_0" }
+libzlib = { version = ">=1.3.1,<2", build = "hb9d3cd8_2" }
+ncurses = { version = ">=6.5,<7", build = "h2d0b736_3" }
+openssl = { version = ">=3.6.0,<4", build = "h26f9b46_0" }
+pip = { version = ">=25.3,<26", build = "pyh145f28c_0" }
+python = { version = ">=3.13.9,<3.14", build = "h2b335a9_100_cp313" }
+python_abi = { version = ">=3.13,<4", build = "8_cp313" }
+readline = { version = ">=8.2,<9", build = "h8c095d6_2" }
+sqlparse = { version = ">=0.5.4,<0.6", build = "pyhd8ed1ab_0" }
+tk = { version = ">=8.6.13,<9", build = "noxft_hd72426e_102" }
+typing_extensions = { version = ">=4.15.0,<5", build = "pyhcf101f3_0" }
+tzdata = { version = ">=2025b,<2026a", build = "h78e105d_0" }
+
+[feature.production.dependencies]
+gunicorn = "*"
 
 [environments]
-production = ["production-tools"]
-
-[feature.production-tools.dependencies]
-gunicorn = "*"
+production = ["production"]
