--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     image: nginx:latest
     ports:
       - "80:80"
+    restart: always
     depends_on:
       - quoteboard
     volumes:
@@ -13,17 +14,18 @@ services:
     build: .
     expose:
       - "8000"
+    restart: always
     environment:
-      - ALLOWED_HOSTS=localhost,127.0.0.1
-      - SECRET_KEY=u#-wdw42xg(4=m3%drq346b-u3sw+05^grrt+0&#nvu$^3sps9
-      - DEBUG=True
-      - STATIC_URL=/static/
-      - STATIC_ROOT=/app/static
-      - POSTGRES_HOST=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=quoteboard
-      - POSTGRES_PORT=5432
+      ALLOWED_HOSTS: ${ALLOWED_HOSTS}
+      SECRET_KEY: ${SECRET_KEY}
+      DEBUG: ${DEBUG}
+      STATIC_URL: /static/
+      STATIC_ROOT: /app/static
+      POSTGRES_HOST: postgres
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: quoteboard
+      POSTGRES_PORT: 5432
     depends_on:
       - postgres
     volumes:
@@ -34,10 +36,11 @@ services:
     container_name: quoteboard_db
     environment:
       POSTGRES_DB: quoteboard
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     expose:
       - "5432"
+    restart: always
     volumes:
       - db_data:/var/lib/postgresql
 volumes:
