--- a/Dockerfile.portainer
+++ b/Dockerfile.portainer
@@ -27,4 +27,4 @@ WORKDIR /app/quoteboard
 EXPOSE 8000
 ENTRYPOINT [ "/app/entrypoint.sh" ]
 
-CMD ["/app/start.sh"]
+CMD ["gunicorn", "quoteboard.wsgi:application", "--bind", "0.0.0.0:8000"]
